--- a/user_management/users/templates/users/base.html
+++ b/user_management/users/templates/users/base.html
@@ -23,7 +23,10 @@
                   <div class="navbar-nav ml-auto">
                     {% if user.is_authenticated %}
                     <a href="#" class="nav-item nav-link">Profile</a>
-                    <a href="{% url 'logout' %}" class="nav-item nav-link">Logout</a>
+                    <form method="post" action="{% url 'logout' %}">
+                        {% csrf_token %}
+                        <button class="nav-item nav-link" type="submit">Log out</button>
+                    </form>
                     {% else %}
                     <a href="{% url 'login' %}" class="nav-item nav-link">Sign in</a>
                     {% endif %}
