--- a/user_management/users/templates/users/base.html
+++ b/user_management/users/templates/users/base.html
@@ -22,7 +22,7 @@
               <div class="collapse navbar-collapse" id="navbarCollapse">
                   <div class="navbar-nav ml-auto">
                     {% if user.is_authenticated %}
-                    <a href="#" class="nav-item nav-link">Profile</a>
+                    <a href="{% url 'users-profile' %}" class="nav-item nav-link">Profile</a>
                     <form method="post" action="{% url 'logout' %}">
                         {% csrf_token %}
                         <button class="nav-item nav-link" type="submit">Log out</button>
